nearly finished first beta release version

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Dummy</title>
-  <%= stylesheet_link_tag "blog", "application" %>
+  <%= stylesheet_link_tag "blogit", "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -23,6 +23,6 @@
   <footer id="application_footer">
     By <%= link_to("Gavin Morrice", "http://gavinmorrice.com") %>
   </footer>
-  <%= javascript_include_tag "blog" %>
+  <%= javascript_include_tag "blogit", "application" %>
 </body>
 </html>
