--- a/spec/dummy/app/assets/stylesheets/application.css
+++ b/spec/dummy/app/assets/stylesheets/application.css
@@ -15,44 +15,44 @@ body{
 footer#application_footer{
   text-align:center;
 }
-.blog_post {
+.blogit_post {
 
 }
-.blog_post header h1 a{
+.blogit_post header h1 a{
   text-decoration: none;
   color: blue; 
 }
-.blog_post_footer, footer{
+.blogit_post_footer, footer{
   font-size: 0.8em;
   font-style: italic;
   color: silver;
 }
-.blog_post_comments_count{
+.blogit_post_comments_count{
   margin: 1em 0;
   text-align: right;
 }
-.blog_post_spacer{
+.blogit_post_spacer{
   width: 80%;
   margin: 1em auto;
   border-color: thin solid silver;
   border-top: none;
 }
-#new_blog_post_link{
+#new_blogit_post_link{
   text-align: right;
 }
-#new_blog_post, .edit_blog_post{
+#new_blogit_post, .edit_blogit_post{
   width: 100%;
   
 }
 #post_title, #post_body{
   width: 100%;
 }
-.blog_comment{
+.comment{
   width: 20em;
   margin: 1em 0;
   padding: 0 0 1em;
   border-bottom: thin solid silver;
 }
-.blog_comment .actions, .blog_post .actions{
+.blog_comment .actions, .blogit_post .actions{
   text-align: right;
 }
