--- a/app/views/blogit/comments/_comment.html.erb
+++ b/app/views/blogit/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag_for(:article, comment) do %>
+<%= content_tag(:article, id: "blog_comment_#{comment.id}", class: "blog_comment") do %>
   <%= content_tag(:div, class: "blog_comment_name", id: "blog_comment_#{comment.id}_name") do %>
     <%= comment.website? ? link_to(comment.name, comment.website) : comment.name %> wrote:
   <% end %>
