--- a/app/assets/stylesheets/blogit/comments.css
+++ b/app/assets/stylesheets/blogit/comments.css
@@ -1,3 +1,16 @@
-#new_blogit_comment .hidden{
+#new_blog_comment{
+  width: 600px;
+  margin: 0 auto;
+}
+#new_blog_comment .hidden {
   display: none;
+}
+.blog_comment{
+  width: 600px;
+  margin: 1em auto;
+  padding: 0 0 1em;
+  border-bottom: thin solid silver;
+}
+.blog_comment .actions, .blog_post .actions{
+  text-align: right;
 }
