--- a/app/views/blogit/comments/_comment.html.erb
+++ b/app/views/blogit/comments/_comment.html.erb
@@ -10,7 +10,7 @@
   <% end %>
   
   <%= blog_comment_tag(:footer) do %>
-    Posted on <%= time_tag(@post.created_at, Blogit.configuration.datetime_format) %>
+    Posted on <%= time_tag(comment.created_at, Blogit.configuration.datetime_format) %>
   <% end %>
   
   <%= render partial: "blogit/comments/admin_links" %>
