--- a/app/views/blogit/posts/_empty.html.erb
+++ b/app/views/blogit/posts/_empty.html.erb
@@ -1,3 +1,3 @@
 <div class="blogit_empty_message">
-  Sorry, there are no posts about "<%= params[:tag] %>".
+  <%=t 'blogit.posts.there_are_no_posts_about', tag: params[:tag] %>
 </div>
