--- a/app/views/blogit/posts/_post_links.html.erb
+++ b/app/views/blogit/posts/_post_links.html.erb
@@ -1,5 +1,5 @@
 <%= login_required do  %>
   <%= actions do %>
-    <%= link_to("edit", edit_post_path(post)) %> | <%= link_to("delete", post, method: :destroy, confirm: "Are you sure you want to remove this post?") %>
+    <%= link_to(t('blogit.posts.edit'), edit_post_path(post)) %> | <%= link_to(t('blogit.posts.delete'), post, method: :destroy, confirm: t('blogit.posts.are_you_sure_you_want_to_remove_this_post')) %>
   <% end %>
 <% end unless blogit_conf.author_edits_only and not this_blogger?(post) %>
