--- a/app/views/blogit/posts/index.html.erb
+++ b/app/views/blogit/posts/index.html.erb
@@ -1,17 +1,17 @@
 <%= login_required class: "actions", id: "new_blog_post_link" do %>
-  <%= link_to 'New Blog post', new_post_path %>
+  <%= link_to t('blogit.posts.new_blog_post'), new_post_path %>
 <% end %>
 
 <% if @posts.any? %>
 
-  <%= render partial: "blogit/posts/post", 
-    collection: @posts, 
-    spacer_template: "blog_post_spacer", 
+  <%= render partial: "blogit/posts/post",
+    collection: @posts,
+    spacer_template: "blog_post_spacer",
     locals: {show_comments_count: true}  %>
 <% else %>
-  
+
   <%= render partial: "blogit/posts/empty" %>
-  
+
 <% end %>
 
 <%= render "pagination" %>
