--- a/app/views/blogit/comments/_admin_links.html.erb
+++ b/app/views/blogit/comments/_admin_links.html.erb
@@ -1,3 +1,3 @@
 <%= login_required(class: "actions") do %>
-  <%= link_to(t('blogit.comments.delete'), [@post, @comment], method: :delete) %>
+  <%= link_to(t(:delete, scope: 'blogit.comments'), [@post, @comment], method: :delete) %>
 <% end %>
