--- a/app/views/blogit/posts/edit.html.erb
+++ b/app/views/blogit/posts/edit.html.erb
@@ -1,3 +1,3 @@
-<h2><%=t 'blogit.posts.edit_blog_post', id: @post.id %></h2>
+<h2><%=t :edit_blog_post, scope: 'blogit.posts', id: @post.id %></h2>
 
 <%= render 'form' %>
