--- a/app/views/blogit/comments/_admin_links.html.erb
+++ b/app/views/blogit/comments/_admin_links.html.erb
@@ -1,3 +1,3 @@
 <%= login_required(class: "actions") do %>
-  <%= link_to(t(:delete, scope: 'blogit.comments'), [@post, @comment], method: :delete) %>
+  <%= link_to(t(:delete, scope: 'blogit.comments'), [@post, comment], method: :delete, confirm: t(:are_you_sure_you_want_to_remove_this_comment, scope: 'blogit.comments')) %>
 <% end %>
