--- a/app/views/blogit/comments/_form.html.erb
+++ b/app/views/blogit/comments/_form.html.erb
@@ -18,7 +18,7 @@
   <% end %>
 
   <%= field do %>
-    <%= f.label :email, "Email" %> <%=t :never_displayed, scope: 'blogit.comments'%><br>
+    <%= f.label :email, t(:email_never_displayed, scope: 'blogit.comments') %><br>
     <%= f.email_field :email %>
     <%= errors_on(@comment, :email) %>
   <% end %>
