--- a/app/views/blogit/posts/show.html.erb
+++ b/app/views/blogit/posts/show.html.erb
@@ -1,7 +1,2 @@
 <%= render @post %>
-<% if blogit_conf.include_comments %>
-  <div id="comments">
-    <%= render @post.comments %>
-  </div>
-  <%= render "blogit/comments/form" %>    
-<% end %>
+<%= comments_for @post, @comment %>
