Fix jquery loading in dummy app

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -27,6 +27,6 @@
   <footer id="application_footer">
     By <%= link_to("Gavin Morrice", "http://gavinmorrice.com") %>
   </footer>
-  <%= javascript_include_tag "blogit", "application" %>
+  <%= javascript_include_tag "application", "blogit" %>
 </body>
 </html>
