--- a/app/views/blogit/posts/_active_record_comments.html.erb
+++ b/app/views/blogit/posts/_active_record_comments.html.erb
@@ -1,4 +1,4 @@
 <div id="comments">
   <%= render post.comments %>
 </div>
-<%= render partial: "blogit/comments/form", locals: { post: post, comment: comment } %>
+<%= render :partial => "blogit/comments/form", :ocals => { :post => post, :comment => comment } %>
