--- a/app/views/blogit/posts/_comments_count.html.erb
+++ b/app/views/blogit/posts/_comments_count.html.erb
@@ -1,5 +1,5 @@
-<%= content_tag(:div, class: "blog_post_comments_count", id: "blog_post_#{post.id}_comments_count") do %>
-  <%= link_to(post_path(post, anchor: "comments")) do %>
-    <%=t :comment, scope: 'blogit.posts', count: post.comments_count %>
+<%= content_tag(:div, :class => "blog_post_comments_count", :id => "blog_post_#{post.id}_comments_count") do %>
+  <%= link_to(post_path(post, :anchor => "comments")) do %>
+    <%=t :comment, :scope => 'blogit.posts', :count => post.comments_count %>
   <% end %>
 <% end %>
