--- a/app/views/blogit/comments/_comment.html.erb
+++ b/app/views/blogit/comments/_comment.html.erb
@@ -1,19 +1,18 @@
-<%= content_tag(:article, id: "blog_comment_#{comment.id}", class: "blog_comment") do %>
-  <%= content_tag(:div, class: "blog_comment_name", id: "blog_comment_#{comment.id}_name") do %>
-    <%=t :wrote, scope: 'blogit.comments', author: comment.website? ? link_to(comment.name, comment.website) : comment.name %>
+<%= content_tag(:article, :id => "blog_comment_#{comment.id}", :class => "blog_comment") do %>
+  <%= content_tag(:div, :class => "blog_comment_name", :id => "blog_comment_#{comment.id}_name") do %>
+    <%=t :wrote, :scope => 'blogit.comments', :author => comment.website? ? link_to(comment.name, comment.website) : comment.name %>
   <% end %>
 
 
-  <%= content_tag(:div, class: "blog_comment_body",
-      id: "blog_comment_#{comment.id}_body") do %>
+  <%= content_tag(:div, :class => "blog_comment_body", :id => "blog_comment_#{comment.id}_body") do %>
       <%= format_content comment.body || "" %>
   <% end %>
 
   <%= blog_comment_tag(:footer) do %>
-    <%=t :posted_on, scope: 'blogit.comments'%> <%= time_tag(comment.created_at, Blogit.configuration.datetime_format) %>
+    <%= t(:posted_on, :scope => 'blogit.comments') %> <%= time_tag(comment.created_at, Blogit.configuration.datetime_format) %>
   <% end %>
 
-  <%= render partial: "blogit/comments/admin_links", locals: {comment: comment} %>
+  <%= render :partial => "blogit/comments/admin_links", :locals => { :comment => comment } %>
 
 <% end if comment.persisted? %>
 
