--- a/app/views/blogit/posts/_empty.html.erb
+++ b/app/views/blogit/posts/_empty.html.erb
@@ -1,3 +1,3 @@
 <div class="blogit_empty_message">
-  <%=t :there_are_no_posts_about, scope: 'blogit.posts', tag: params[:tag] %>
+  <%=t :there_are_no_posts_about, :scope => 'blogit.posts', :tag => params[:tag] %>
 </div>
