--- a/app/views/blogit/posts/index.html.erb
+++ b/app/views/blogit/posts/index.html.erb
@@ -1,16 +1,16 @@
-<%= login_required class: "actions", id: "new_blog_post_link" do %>
-  <%= link_to t(:new_blog_post, scope: 'blogit.posts'), new_post_path %>
+<%= login_required :class => "actions", :id => "new_blog_post_link" do %>
+  <%= link_to t(:new_blog_post, :scope => 'blogit.posts'), new_post_path %>
 <% end %>
 
 <% if @posts.any? %>
 
-  <%= render partial: "blogit/posts/post",
-    collection: @posts,
-    spacer_template: "blog_post_spacer",
-    locals: {show_comments_count: (Blogit.configuration.include_comments == :active_records) }  %>
+  <%= render :partial => "blogit/posts/post",
+    :collection => @posts,
+    :spacer_template => "blog_post_spacer",
+    :locals => { :show_comments_count => (Blogit.configuration.include_comments == :active_records) } %>
 <% else %>
 
-  <%= render partial: "blogit/posts/empty" %>
+  <%= render :partial => "blogit/posts/empty" %>
 
 <% end %>
 
