--- a/app/views/blogit/posts/new.html.erb
+++ b/app/views/blogit/posts/new.html.erb
@@ -1,3 +1,3 @@
-<h2><%=t :write_a_new_blog_post, scope: 'blogit.posts'%></h2>
+<h2><%=t :write_a_new_blog_post, :scope => 'blogit.posts'%></h2>
 
 <%= render 'form' %>
