Refactored helpers CommentsHelper#blog_comment_tag and PostsHelper#blog_post_tag into ApplicationHelper#blog_tag

--- a/app/views/blogit/comments/_comment.html.erb
+++ b/app/views/blogit/comments/_comment.html.erb
@@ -9,7 +9,7 @@
       <%= format_content comment.body || "" %>
   <% end %>
 
-  <%= blog_comment_tag(:footer) do %>
+  <%= blog_tag(:footer, type: "comment") do %>
     <%=t :posted_on, scope: 'blogit.comments'%> <%= time_tag(comment.created_at, Blogit.configuration.datetime_format) %>
   <% end %>
 
