--- a/app/views/blogit/posts/_disqus_comments.html.erb
+++ b/app/views/blogit/posts/_disqus_comments.html.erb
@@ -6,7 +6,7 @@
    /* * * DON'T EDIT BELOW THIS LINE * * */
    (function() {
      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = '<%= request.protocol %>' + disqus_shortname + '.disqus.com/embed.js';
+     dsq.src = '<%= request.protocol %>' + disqus_shortname + '.disqus.com/embed.js?<%= request.protocol %>';
      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
    })();
 </script>
