Change "root" route to "blog_root" to avoid name clash with application's "root" route

--- a/app/views/blogit/posts/_form.html.erb
+++ b/app/views/blogit/posts/_form.html.erb
@@ -37,7 +37,7 @@
 
   <%= actions do %>
     <%= f.submit %> <%=t :or, scope: 'blogit.posts'%>
-    <%= link_to(t(:cancel, scope: 'blogit.posts'), @post.new_record? ? root_path : post_path(@post)) %>
+    <%= link_to(t(:cancel, scope: 'blogit.posts'), @post.new_record? ? blog_root_path : post_path(@post)) %>
   <% end %>
 
 <% end %>
