Checks if pygments is installed when using md
... and code highlighting

Closes #27

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= link_to("log in", main_app.new_session_path) %>
     <% end %>
 
-    <h1><%= link_to("My Awesome Blog", blog_root_path) %></h1>
+    <h1><%= link_to("My Awesome Blog", blogit.blog_root_path) %></h1>
 
     <%= yield %>
   </div>
