Added CSS file for code highlighting
Close #32

--- a/spec/dummy/app/assets/stylesheets/application.css
+++ b/spec/dummy/app/assets/stylesheets/application.css
@@ -2,7 +2,10 @@
 /* = Some CSS for the dummy app only = */
 /* =================================== */
 
-/* *= require_tree . */
+/* 
+  *= require_tree . 
+*/
+
 body{
   font-size: 15px;
   line-height: 1.5em;
