--- a/app/views/blogit/posts/_share_bar.html.erb
+++ b/app/views/blogit/posts/_share_bar.html.erb
@@ -1,6 +1,6 @@
-<div id="blog_share_bar">
+<div id="share_bar">
 
-  <div id="google-plus" class="social_button">
+  <div class="share_bar-social_button is_google_plus">
     <!-- GOOGLE +1 -->
     <g:plusone size="medium"></g:plusone>
     <script type="text/javascript">
@@ -15,7 +15,7 @@
     <!-- /GOOGLE +1 -->
   </div>
 
-  <div id="twitter" class="social_button">
+  <div class="share_bar-social_button is_twitter">
     <!-- TWITTER -->
     <a href="https://twitter.com/share" class="twitter-share-button"
         data-lang="<%= I18n.default_locale %>"
@@ -28,7 +28,7 @@
     <!-- /TWITTER -->
   </div>
 
-  <div id="facebook" class="social_button">
+  <div class="share_bar-social_button is_facebook">
     <!-- FACEBOOK LIKE -->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
