--- a/app/views/blogit/posts/_blogger_information.html.erb
+++ b/app/views/blogit/posts/_blogger_information.html.erb
@@ -1,4 +1,6 @@
 <%= blog_tag :footer do %>
-    <%=t :written_by, scope: 'blogit.posts', author: post.blogger_display_name %>
-    <%= time_tag(post.created_at, pubdate: true, format: blogit_conf.datetime_format) %>
+  <%= blog_tag :span, t(:written_by, scope: 'blogit.posts', 
+    author: post.blogger_display_name) , class: "blog_post_footer-blogger" %>
+  <%= time_tag(post.created_at, pubdate: true, 
+    class: "blog_post_footer-published_at" ,format: blogit_conf.datetime_format) %>
 <% end %>
