--- a/spec/dummy/app/views/layouts/custom.html.erb
+++ b/spec/dummy/app/views/layouts/custom.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Dummy</title>
-  <%= stylesheet_link_tag "blogit", "application" %>
+  <%= stylesheet_link_tag "application" %>
+  <%= stylesheet_link_tag "blogit" %>  
   <%= csrf_meta_tags %>
 </head>
 <body>
