Added blog post description field

--- a/app/views/blogit/posts/show.html.erb
+++ b/app/views/blogit/posts/show.html.erb
@@ -1,3 +1,5 @@
+<% description @post.description %>
+
 <%= content_tag(:article, id: "blog_post_#{@post.id}", class: "blog_post") do %>
 
   <%# Render the header for this blog post %>
