--- a/app/views/blogit/posts/_post.html.erb
+++ b/app/views/blogit/posts/_post.html.erb
@@ -4,7 +4,7 @@
   <%= render "blogit/posts/post_head", post: post %>
 
   <%# Render the body of this blog post (as Markdown) %>
-  <%= format_content(post.body) %>
+  <%= format_content(blogit_conf.show_post_description ? post.description : post.body) %>
 
   <%# Render the no. of comments %>
   <%= render "blogit/posts/comments_count",
