--- a/app/views/blogit/posts/index.html.erb
+++ b/app/views/blogit/posts/index.html.erb
@@ -1,3 +1,9 @@
+<% if params[:tag] %>
+  <h2>
+    <%= t(:showing_posts_tagged_with, scope: "blogit.posts", tag: params[:tag])  %>
+  </h2>
+<% end %>
+
 <% if @posts.any? %>
 
   <%= render partial: "blogit/posts/post",
