Added better rules for CSS and SASS

--- a/spec/dummy/app/assets/stylesheets/base/_html.sass
+++ b/spec/dummy/app/assets/stylesheets/base/_html.sass
@@ -3,7 +3,7 @@
 body
   font-size: 15px
   line-height: 1.5em
-  font-family: verdana, sans-serif
+  font-family: "open sans", Arial, sans-serif
 
 
 h1
