--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
 <head>
   <title>Dummy</title>
   <%= stylesheet_link_tag "application" %>
-  <%= stylesheet_link_tag "blogit" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -13,11 +12,11 @@
     <h1><%= link_to("My Awesome Blog", main_app.root_path) %></h1>
     
     <main id="main_content">
-
       <%= yield %>      
     </main>
     
     <aside id="side_content">
+      <h3>Archive</h3>
       <%= blog_posts_archive_tag('archive-year', 'archive-month', 'archive-post') do |post| %>
         <%= link_to(post.title, blogit.post_path(post)) %>
       <% end %>
@@ -27,7 +26,10 @@
 
 
   <footer id="application_footer">
-    By <%= link_to("Katana Code", "http://katanacode.com") %>
+    <%= link_to("Blogit", "http://blogit.katanacode.com", target: "_blank") %> was
+    created by your pals at 
+    <%= link_to('Katana Code', "http://facebook.com/katanacode", target: "_blank") %>
+     :o)
   </footer>
   <%= javascript_include_tag "application", "blogit" %>
 </body>
