Added partial for social media meta tags

--- a/app/views/blogit/posts/show.html.erb
+++ b/app/views/blogit/posts/show.html.erb
@@ -1,4 +1,5 @@
-<% description @post.description %>
+<% title @post.title %>
+<% description @post.description.to_s %>
 
 <%= content_tag(:article, id: "blog_post_#{@post.id}", class: "blog_post") do %>
 
