--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -20,9 +20,7 @@
     
     <aside id="side_content">
       <h3>Archive</h3>
-      <%= blog_posts_archive_tag('archive-year', 'archive-month', 'archive-post') do |post| %>
-        <%= link_to(post.title, blogit.post_path(post)) %>
-      <% end %>
+      <%= archive_list_for_posts(Blogit::Post.all) %>
     </aside>
   </div>
 
